# rustelearn

./: .env.example  .gitignore  Dockerfile  Procfile  README.md  main.py  pyproject.toml  railway.toml
src/config/: settings.py
src/database/: connection.py  migrations.py  models.py
src/handlers/: callback_handlers.py  command_handlers.py
src/utils/: achievement_manager.py  openai_tools.py
tests/: main.py
