[tool.poetry]
name = "rustelearning"
version = "0.1.0"
description = "A Telegram bot for learning Rust programming"
authors = ["igormintz <igormintz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-telegram-bot = "^20.7"
openai = "^1.12.0"
SQLAlchemy = "^2.0.27"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
schedule = "^1.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
